Minor adjustments to battle themes
- Battle menu: Fix text width when accompanied by sprite
- Battle dialogue: Add padding to account for updated border

--- a/css/global.css
+++ b/css/global.css
@@ -774,6 +774,7 @@ d-box, d-choices {
 			color: var(--black);
 			font-family: "DeltaFont Combat", var(--font);
 			font-size: 1em;
+			padding: 0.2em 0.3em;
 
 			d-speaker {
 				--lightyellow: color-mix(in srgb, var(--orange), var(--black));
