--- a/css/global.css
+++ b/css/global.css
@@ -883,7 +883,7 @@ d-box, d-choices {
 					position: absolute;
 					top: -0.25em;
 					left: -2.1em;
-					border: 0.2em solid var(--white);
+					border: 0.2em solid var(--black);
 					--size: 1.75em;
 					width: var(--size);
 					height: var(--size);
@@ -895,6 +895,14 @@ d-box, d-choices {
 			&:has(> d-speaker.susie)::before { background-image: url("../assets/images/faces/susie/battle.png") }
 			&:has(> d-speaker.ralsei)::before { background-image: url("../assets/images/faces/ralsei/battle.png") }
 			&:has(> d-speaker.noelle)::before { background-image: url("../assets/images/faces/noelle/battle.png") }
+		}
+		&:is([theme=light], [theme=dark]):has(
+			> d-speaker.kris,
+			> d-speaker.susie,
+			> d-speaker.ralsei,
+			> d-speaker.noelle
+		)::before {
+			border-color: var(--white);
 		}
 		&[theme=fade]:has(
 			> d-speaker.kris,
