Prevent text breakage at hyphen in d-boxes

--- a/css/global.css
+++ b/css/global.css
@@ -952,6 +952,7 @@ d-box {
 	&:not(:state(compact)) {
 		/* Align text towards start */
 		grid-template-rows: auto auto 1fr;
+		word-break: keep-all;
 
 		d-box {
 			position: absolute;
