Adjust Rouxls color in white speech bubbles

--- a/css/global.css
+++ b/css/global.css
@@ -788,6 +788,7 @@ d-box, d-choices {
 				--berdly: #36394b;
 				--lancer: #406080;
 				--queen: #1263bc;
+				--rouxls: #3620b0; /* CUSTOM-PICKED, NOT FROM SPRITE; lightened for readability from #0f0062 */
 				--jevil: #3c3c97; /* darkened for readbility from #6d6dc0 */
 				--friend-pink: #a24b68; /* darkened for readability from #ffaec9 */
 				--friend-yellow: #9f9600; /* darkened for readability from #fff200 */
