--- a/css/global.css
+++ b/css/global.css
@@ -990,6 +990,7 @@ d-box {
 			border-inline-width: 0;
 			margin: 0;
 			width: max-content;
+			text-shadow: none;
 			/* Center content */
 			align-items: center;
 
