Correct 8-bit choices narrowing for 2 options
It was checking for ANY first or second last-children, not specifically the d-options as last-children. Given that the d-options should be the only chlidren, I'm not sure why this didn't work... but oh well!

--- a/css/global.css
+++ b/css/global.css
@@ -1283,7 +1283,7 @@ d-choices {
 	}
 
 	/* For 8-bit choice menus with at most 2 children, scrunch the kids together */
-	&:is([theme=eightbit], [theme="8bit"]):has(:nth-child(1):last-child, :nth-child(2):last-child) d-option {
+	&:is([theme=eightbit], [theme="8bit"]):has(> :nth-child(1):last-child, > :nth-child(2):last-child) d-option {
 		&[index="0"] { left: 4.74em }
 		&[index="1"] { right: 4.65em }
 	}
