--- a/css/global.css
+++ b/css/global.css
@@ -1509,6 +1509,20 @@ d-option-panel {
 	) {
 		margin-block-start: 0.75em;
 	}
+	
+	body.compact & {
+		&:has(> :nth-child(2))::before,
+		&:has(> :nth-child(3))::after {
+			content: "/";
+			margin-inline-start: min(1em, 3vw);
+			color: gray;
+		}
+		& > :first-child { order: 0 }
+		&::before { order: 1 }
+		& > :nth-child(2) { order: 2 }
+		&::after { order: 3 }
+		& > :nth-child(3) { order: 5 }
+	}
 }
 /* Winglade encounter dialogue */
 @keyframes rotate {
