--- a/css/global.css
+++ b/css/global.css
@@ -983,6 +983,8 @@ d-box, d-choices {
 		margin: 0 0 0 min(1em, 3vw);
 		gap: 0 0.5ch;
 		align-items: baseline;
+		
+		:not(.boxgroup) > &[theme=battletalk] { padding-inline-start: 0.5ch }
 
 		/* On smaller screens, stack dialogue instead */
 		@media (max-width: 30rem) {
@@ -1514,6 +1516,8 @@ d-option-panel {
 .boxgroup {
 	display: flex;
 	flex-wrap: wrap;
+	& > :first-child { padding-inline-start: 0.5ch }
+	& > :first-child ~ d-box { margin-inline-start: 0 }
 
 	&:has(
 		[theme^=battletalk] :is(
@@ -1526,17 +1530,17 @@ d-option-panel {
 	}
 	
 	body.compact & {
+		gap: min(1em, 3vw);
 		&:has(> :nth-child(2))::before,
 		&:has(> :nth-child(3))::after {
 			content: "/";
-			margin-inline-start: min(1em, 3vw);
 			color: gray;
 		}
 		& > :first-child { order: 0 }
 		&::before { order: 1 }
 		& > :nth-child(2) { order: 2 }
 		&::after { order: 3 }
-		& > :nth-child(3) { order: 5 }
+		& > :nth-child(3) { order: 4 }
 	}
 }
 /* Winglade encounter dialogue */
